packages/isar_db/test/errors/class/variable.dart
// only classes

import 'package:isar_db/isar_db.dart';

// Test case for variable annotation validation

// ignore: invalid_annotation_target - Test case for variable annotation validation
@collection
const t = 'hello';
